--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
         		.script('system/Vector2.js').wait()
         		.script('system/Canvas2D.js').wait()
         		.script('system/Sound.js').wait()
-
         		.script('system/Keys.js').wait()
         		.script('system/Colors.js').wait()
+                
+                .script('input/ButtonState.js').wait()
                 .script('input/Keyboard.js').wait()
                 .script('input/Mouse.js').wait()
                 
