Day1 - Closing Commit - Input Handling

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Painter</title>
+	<title>Jewel Jam</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="style.css">
 	<script src="system/LAB.min.js"></script>
     <script>
@@ -12,7 +13,7 @@
         		.script('system/Sound.js').wait()
         		.script('system/Keys.js').wait()
         		.script('system/Colors.js').wait()
-                
+
                 .script('input/ButtonState.js').wait()
                 .script('input/Keyboard.js').wait()
                 .script('input/Mouse.js').wait()
