--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         $LAB
         		.script('system/Vector2.js').wait()
+                .script('system/Rectangle.js').wait()
         		.script('system/Canvas2D.js').wait()
         		.script('system/Sound.js').wait()
         		.script('system/Keys.js').wait()
@@ -17,6 +18,7 @@
                 .script('input/ButtonState.js').wait()
                 .script('input/Keyboard.js').wait()
                 .script('input/Mouse.js').wait()
+                .script('input/Touch.js').wait()
                 
 				.script('system/Game.js').wait()
 
