Adding separate Jewel, creating grids, rearranging gameworld

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 				.script('system/Game.js').wait()
 
 				.script('elements/GameObject.js').wait()
+                .script('elements/GameObjectList.js').wait()
+                .script('elements/GameObjectGrid.js').wait()
+                .script('elements/SpriteGameObject.js').wait()
+
+                .script('elements/Jewel.js').wait()
+                .script('elements/JewelGrid.js').wait()
+
                 .script('GameWorld.js').wait()
 
                 .script('app.js').wait(function () {
